[gd_scene load_steps=6 format=3 uid="uid://boyhi8m36wbbb"]

[ext_resource type="Script" uid="uid://dspps1ifx106u" path="res://assets/Scripts/Menu/settings.gd" id="1_r1x3p"]
[ext_resource type="AudioStream" uid="uid://bdxcsn7r28u6t" path="res://assets/Music/Background/somersaults-edm-ost-track-176960.mp3" id="2_ious4"]
[ext_resource type="Texture2D" uid="uid://cjuuuwhnhd4ag" path="res://assets/Sprites/Button/blue_rectangle.png" id="3_34t13"]
[ext_resource type="Texture2D" uid="uid://dypwcc62ifion" path="res://assets/Sprites/Button/green_rectangle.png" id="4_0qxqi"]
[ext_resource type="LabelSettings" uid="uid://bc0ok6wpep447" path="res://assets/Scenes/Menu/new_label_settings.tres" id="5_3k6fl"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1x3p")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ious4")

[node name="Confirm" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -48.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_34t13")
texture_hover = ExtResource("4_0qxqi")
texture_focused = ExtResource("4_0qxqi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 64.0
offset_top = 99.0
offset_right = 576.0
offset_bottom = 342.0
theme_override_constants/separation = 37

[node name="4" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="VolumeText3" type="Label" parent="VBoxContainer/4"]
layout_mode = 2
offset_top = -29.0
offset_right = 512.0
offset_bottom = -4.0
text = " Master"
label_settings = ExtResource("5_3k6fl")

[node name="6" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="VolumeText3" type="Label" parent="VBoxContainer/6"]
layout_mode = 2
offset_top = -29.0
offset_right = 512.0
offset_bottom = -4.0
text = "Music"
label_settings = ExtResource("5_3k6fl")

[node name="5" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="VolumeText4" type="Label" parent="VBoxContainer/5"]
layout_mode = 2
offset_top = -29.0
offset_right = 512.0
offset_bottom = -4.0
text = "SFX"
label_settings = ExtResource("5_3k6fl")

[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="value_changed" from="VBoxContainer/4" to="." method="_on__value_changed"]
[connection signal="value_changed" from="VBoxContainer/4" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/6" to="." method="_on_musicvol_value_changed"]
[connection signal="value_changed" from="VBoxContainer/6" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/5" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="VBoxContainer/5" to="." method="_on_volume_value_changed"]
